--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
       "email": "jason@thefifthworld.com"
     }
   ],
-  "main": "index.js"
+  "main": "index.js",
+  "devDependencies": {
+    "browser-sync": "^2.26.7"
+  }
 }
