--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "main": "index.js",
   "devDependencies": {
     "autoprefixer": "^9.7.6",
-    "browser-sync": "^2.26.7"
+    "browser-sync": "^2.26.7",
+    "chokidar-cli": "^2.1.0"
   }
 }
