--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "autoprefixer": "^9.7.6",
     "browser-sync": "^2.26.7",
     "chokidar-cli": "^2.1.0",
-    "node-sass-chokidar": "^1.4.0"
+    "node-sass-chokidar": "^1.4.0",
+    "normalize-scss": "^7.0.1"
   }
 }
