--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chokidar-cli": "^2.1.0",
     "node-sass-chokidar": "^1.4.0",
     "normalize-scss": "^7.0.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^7.1.0"
   }
 }
