--- a/package.json
+++ b/package.json
@@ -23,6 +23,18 @@
     }
   ],
   "main": "index.js",
+  "scripts": {
+    "dev:css:compile": "node-sass-chokidar --source-map true ./scss --output ./css",
+    "dev:sass:build": "npm-run-all -p dev:css:compile css:postcss",
+    "dev:sass:watch": "chokidar 'scss/*.scss' 'scss/**/*.scss' --command 'npm run dev:sass:build'",
+    "dev:css": "npm-run-all -p dev:sass:*",
+    "dev:serve": "browser-sync start --server --files 'css/*.css' 'js/bundle.js' '*.html'",
+    "dev:watch": "npm-run-all -p dev:serve dev:css",
+    "dev": "npm-run-all dev:css:compile dev:watch",
+    "css:compile": "node-sass-chokidar scss/style.scss --output css/ --output-style compressed --omit-source-map-url",
+    "css:postcss": "postcss css/*.css --use autoprefixer --dir css",
+    "prod": "npm-run-all css:compile"
+  },
   "devDependencies": {
     "autoprefixer": "^9.7.6",
     "browser-sync": "^2.26.7",
