--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "dev:sass:build": "npm-run-all -p dev:css:compile css:postcss",
     "dev:sass:watch": "chokidar 'scss/*.scss' 'scss/**/*.scss' --command 'npm run dev:sass:build'",
     "dev:css": "npm-run-all -p dev:sass:*",
+    "dev:tokens": "chokidar 'tokens.json' --command 'npm run tokens'",
     "dev:serve": "browser-sync start --server --files 'css/*.css' 'js/bundle.js' '*.html'",
-    "dev:watch": "npm-run-all -p dev:serve dev:css",
-    "dev": "npm-run-all dev:css:compile dev:watch",
+    "dev:watch": "npm-run-all -p dev:serve dev:tokens dev:css",
+    "dev": "npm-run-all tokens dev:css:compile dev:watch",
     "css:compile": "node-sass-chokidar scss/style.scss --output css/ --output-style compressed --omit-source-map-url",
     "css:postcss": "postcss css/*.css --use autoprefixer --dir css",
-    "prod": "npm-run-all css:compile"
+    "tokens": "node load-variables.js",
+    "prod": "npm-run-all tokens css:compile"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.6",
