--- a/package.json
+++ b/package.json
@@ -37,13 +37,27 @@
     "tokens": "node load-variables.js",
     "prod": "npm-run-all tokens css:compile"
   },
+  "dependencies": {
+    "core-js": "^3.6.5",
+    "core-js-pure": "^3.6.5",
+    "regenerator-runtime": "^0.13.5",
+    "typogr": "^0.6.8"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "autoprefixer": "^9.7.6",
+    "babel-loader": "^8.1.0",
     "browser-sync": "^2.26.7",
     "chokidar-cli": "^2.1.0",
+    "jest": "^25.4.0",
     "node-sass-chokidar": "^1.4.0",
     "normalize-scss": "^7.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^7.1.0"
+    "postcss-cli": "^7.1.0",
+    "standard": "^14.3.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
