--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "normalize-scss": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.0",
+    "smartypants": "^0.1.1",
     "standard": "^14.3.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
