--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "dev:css": "npm-run-all -p dev:sass:* dev:js:bundle",
     "dev:js:bundle": "webpack --config webpack.dev.config.js",
     "dev:tokens": "chokidar 'tokens.json' --command 'npm run tokens'",
-    "dev:serve": "browser-sync start --server --files 'css/*.css' 'js/bundle.js' '*.html'",
+    "dev:serve": "browser-sync start --server --files 'css/*.css' 'js/bundle.js' '*.html' '**/*.html'",
     "dev:watch": "npm-run-all -p dev:serve dev:tokens dev:css",
     "dev": "npm-run-all tokens dev:css:compile dev:watch",
     "tokens": "node load-variables.js",
