Change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thefifthworld-design",
+  "name": "@thefifthworld/design",
   "description": "The Fifth World Design System",
   "version": "1.0.0",
   "license": "CC-BY-SA-4.0",
