Change homepage URL in package

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "The Fifth World Design System",
   "version": "1.0.0",
   "license": "CC-BY-SA-4.0",
-  "homepage": "https://api.thefifthworld.com",
+  "homepage": "https://design.thefifthworld.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/thefifthworld/design.git"
