Add dependency: lodash.debounce

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "core-js-pure": "^3.6.5",
     "cropperjs": "^1.5.7",
     "leaflet": "^1.6.0",
+    "lodash.debounce": "^4.0.8",
     "regenerator-runtime": "^0.13.5",
     "typogr": "^0.6.8"
   },
