--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "leaflet": "^1.6.0",
     "lodash.debounce": "^4.0.8",
     "regenerator-runtime": "^0.13.5",
+    "slugify": "^1.4.0",
     "typogr": "^0.6.8"
   },
   "devDependencies": {
