--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "core-js-pure": "^3.6.5",
-    "cropperjs": "^1.5.7",
+    "croppie": "^2.6.5",
     "leaflet": "^1.6.0",
     "lodash.debounce": "^4.0.8",
     "regenerator-runtime": "^0.13.5",
@@ -59,10 +59,10 @@
     "@babel/preset-env": "^7.9.6",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.26.12",
     "chokidar-cli": "^2.1.0",
     "jest": "^25.5.4",
-    "node-sass-chokidar": "^1.4.0",
+    "node-sass-chokidar": "^1.5.0",
     "normalize-scss": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1",
