Update where the API is located

--- a/js/config.json
+++ b/js/config.json
@@ -1,4 +1,4 @@
 {
-  "apibase": "https://thefifthworld.com/api/v0",
+  "apibase": "https://api.thefifthworld.com/v1",
   "domain": "https://thefifthworld.com"
 }
