--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,6 @@ npm-debug.log
 npm-debug.log.*
 css
 scss/modules/_variables.scss
-js/bundle.js
-js/*.bundle.js
+js/lib/bundle.js
+js/lib/*.bundle.js
 .DS_Store
