Add back dependency: axios

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "test": "standard 'js/src/*.js' 'js/src/**/*.js' && jest"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.11.2",
     "core-js-pure": "^3.11.2",
     "croppie": "^2.6.5",
