--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "normalize-scss": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.2",
+    "sass": "^1.35.1",
     "smartypants": "^0.1.1",
     "standard": "^14.3.4",
     "webpack": "^5.36.2",
