--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.26.13",
     "chokidar-cli": "^2.1.0",
+    "commander": "^4.1.1",
     "jest": "^25.5.4",
     "node-polyfill-webpack-plugin": "^1.1.0",
     "normalize-scss": "^7.0.1",
