Restore npm scripts under new conditions
Also some improvements in hot-loading

--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
   ],
   "main": "index.js",
   "scripts": {
+    "css:compile": "node sass.js",
+    "css:postcss": "postcss css/*.css --use autoprefixer --dir css",
     "start": "npm-run-all tokens dev:css:compile dev:watch",
     "dev:js:bundle": "webpack --config webpack.dev.config.js",
     "dev:tokens": "chokidar 'tokens.json' --command 'npm run tokens'",
-    "dev:serve": "browser-sync start --server --files 'css/*.css' 'js/bundle.js' '*.html' '**/*.html'",
-    "dev:watch": "npm-run-all -p dev:serve dev:tokens dev:css",
+    "dev:serve": "browser-sync start --server --files 'css/*.css' 'js/lib/*.js' '*.html' '**/*.html'",
+    "dev:css:compile": "node sass.js --style expanded",
+    "dev:css:build": "npm-run-all -p dev:css:compile css:postcss",
+    "dev:css:watch": "chokidar './scss/*.scss' './scss/**/*.scss' --command 'npm run dev:css:build'",
+    "dev:watch": "npm-run-all -p dev:serve dev:css:watch dev:js:bundle",
     "tokens": "node load-variables.js",
     "js:lint": "standard 'js/src/*.js' 'js/src/**/*.js'",
     "js:bundle": "webpack --config webpack.prod.config.js",
